--- a/Firebase.CrashReporting/samples/CrashReportingSample/CrashReportingSample/Main.storyboard
+++ b/Firebase.CrashReporting/samples/CrashReportingSample/CrashReportingSample/Main.storyboard
@@ -1,25 +1,120 @@
-﻿<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
-	<dependencies>
-		<plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204" />
-	</dependencies>
-	<scenes>
-		<!--View Controller-->
-		<scene sceneID="tne-QT-ifu">
-			<objects>
-				<viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
-					<layoutGuides>
-						<viewControllerLayoutGuide type="top" id="y3c-jy-aDJ" />
-						<viewControllerLayoutGuide type="bottom" id="wfy-db-euE" />
-					</layoutGuides>
-					<view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-						<rect key="frame" x="0.0" y="0.0" width="600" height="600" />
-						<autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" />
-						<color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite" />
-					</view>
-				</viewController>
-				<placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder" />
-			</objects>
-		</scene>
-	</scenes>
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2657" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="snX-6V-cBQ">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
+    <dependencies>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
+    </dependencies>
+    <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="cDX-uz-0vy">
+            <objects>
+                <navigationController id="snX-6V-cBQ" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Qkt-Lu-Zyu">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.0" green="0.52156862749999999" blue="0.8862745098" alpha="1" colorSpace="calibratedRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="c80-pI-70o"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bj0-KG-rud" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-684" y="138"/>
+        </scene>
+        <!--Firebase Crash Reporting Sample-->
+        <scene sceneID="tne-QT-ifu">
+            <objects>
+                <viewController id="BYZ-38-t0r" customClass="CrashViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="7sh-T0-gFs"/>
+                        <viewControllerLayoutGuide type="bottom" id="YMq-K9-8hn"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="5LD-SC-bBq">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap «Crash app» to invoke an unhandled exception. Then follow instructions commented in code above the exception." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uvn-CO-4Nd">
+                                <rect key="frame" x="16" y="72" width="288" height="130"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="130" id="31Q-qQ-9Hc"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
+                                <color key="textColor" red="0.39607843139999999" green="0.49019607840000001" blue="0.5450980392" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="tAH-nT-dYj">
+                                <rect key="frame" x="136" y="239" width="51" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="31" id="kLg-Xb-4hd"/>
+                                    <constraint firstAttribute="width" constant="49" id="zfk-yH-iOB"/>
+                                </constraints>
+                            </switch>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Log custom message on crash" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ygn-K0-Zcr">
+                                <rect key="frame" x="16" y="210" width="288" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="guk-V3-7Jy"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.39607843139999999" green="0.49019607840000001" blue="0.5450980392" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eg5-xW-vgL">
+                                <rect key="frame" x="115" y="340" width="90" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="90" id="RGk-Io-pVa"/>
+                                    <constraint firstAttribute="height" constant="30" id="lGG-4K-4rn"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
+                                <state key="normal" title="Crash app">
+                                    <color key="titleColor" red="0.39607843139999999" green="0.49019607840000001" blue="0.5450980392" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type your custom message" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="n6b-aE-31T">
+                                <rect key="frame" x="16" y="278" width="288" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="ZaT-8E-b3n"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ygn-K0-Zcr" firstAttribute="top" secondItem="uvn-CO-4Nd" secondAttribute="bottom" constant="8" id="0Od-xR-IPL"/>
+                            <constraint firstItem="uvn-CO-4Nd" firstAttribute="trailing" secondItem="5LD-SC-bBq" secondAttribute="trailingMargin" id="3u3-24-H5c"/>
+                            <constraint firstItem="eg5-xW-vgL" firstAttribute="centerX" secondItem="5LD-SC-bBq" secondAttribute="centerX" id="GDd-CG-BEC"/>
+                            <constraint firstItem="n6b-aE-31T" firstAttribute="top" secondItem="tAH-nT-dYj" secondAttribute="bottom" constant="8" id="Gdo-uF-xe4"/>
+                            <constraint firstItem="tAH-nT-dYj" firstAttribute="centerX" secondItem="5LD-SC-bBq" secondAttribute="centerX" id="HpJ-ly-WcB"/>
+                            <constraint firstItem="uvn-CO-4Nd" firstAttribute="top" secondItem="7sh-T0-gFs" secondAttribute="bottom" constant="8" id="INn-aR-ihS"/>
+                            <constraint firstItem="ygn-K0-Zcr" firstAttribute="leading" secondItem="5LD-SC-bBq" secondAttribute="leadingMargin" id="PEj-Jq-BMw"/>
+                            <constraint firstItem="n6b-aE-31T" firstAttribute="leading" secondItem="5LD-SC-bBq" secondAttribute="leadingMargin" id="PRU-jd-WbN"/>
+                            <constraint firstItem="n6b-aE-31T" firstAttribute="trailing" secondItem="5LD-SC-bBq" secondAttribute="trailingMargin" id="fNS-mW-R1Y"/>
+                            <constraint firstItem="eg5-xW-vgL" firstAttribute="top" secondItem="n6b-aE-31T" secondAttribute="bottom" constant="32" id="iCH-Rc-dUj"/>
+                            <constraint firstItem="uvn-CO-4Nd" firstAttribute="leading" secondItem="5LD-SC-bBq" secondAttribute="leadingMargin" id="loU-xi-k1l"/>
+                            <constraint firstItem="tAH-nT-dYj" firstAttribute="top" secondItem="ygn-K0-Zcr" secondAttribute="bottom" constant="8" id="qXc-Fg-KbC"/>
+                            <constraint firstItem="ygn-K0-Zcr" firstAttribute="trailing" secondItem="5LD-SC-bBq" secondAttribute="trailingMargin" id="xAp-jQ-zh3"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Firebase Crash Reporting Sample" id="WKF-dp-E6T"/>
+                    <connections>
+                        <outlet property="BtnCrash" destination="eg5-xW-vgL" id="qmP-hL-hhI"/>
+                        <outlet property="SwtLog" destination="tAH-nT-dYj" id="2Po-I1-Oi4"/>
+                        <outlet property="TxtLog" destination="n6b-aE-31T" id="eSk-yq-EAb"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="136.875" y="138.38028169014083"/>
+        </scene>
+    </scenes>
 </document>
